fix(header) Higher spacing on mobile (navigation)

--- a/site/web/app/themes/sage/assets/styles/layouts/_header.scss
+++ b/site/web/app/themes/sage/assets/styles/layouts/_header.scss
@@ -153,6 +153,7 @@ button.navbar-toggler .navbar-toggler-icon {
     display: block;
     text-align: center;
     margin:0px;
+    padding: 5px 0;
   }
 
   .navbar {
